--- a/datavirt-app-secret.yaml
+++ b/datavirt-app-secret.yaml
@@ -7,18 +7,6 @@ labels:
   template: datavirt-app-secret
 items:
 
-- kind: ServiceAccount
-  apiVersion: v1
-  metadata:
-    name: datavirt-service-account
-    annotations:
-      description: Service account for use with datavirt examples.
-  secrets:
-  -
-    name: datavirt-app-secret
-  -
-    name: datavirt-app-config
-
 - kind: Secret
   apiVersion: v1
   metadata:
@@ -56,7 +44,7 @@ items:
       ACCOUNTS_H2_NONXA=true
       ACCOUNTS_H2_USERNAME=sa
       ACCOUNTS_H2_PASSWORD=sa
-      ACCOUNTS_H2_URL="jdbc:h2:/home/jboss/source/data/databases/h2/accounts"
+      ACCOUNTS_H2_URL="jdbc:h2:/opt/eap/standalone/data/databases/h2/accounts"
       # required, but unused...
       ACCOUNTS_H2_SERVICE_HOST=dummy
       ACCOUNTS_H2_SERVICE_PORT=12345
@@ -70,7 +58,7 @@ items:
       ACCOUNTS_DERBY_TX_ISOLATION=TRANSACTION_READ_UNCOMMITTED
       ACCOUNTS_DERBY_JTA=true
       # Connection info for xa datasource
-      ACCOUNTS_DERBY_XA_CONNECTION_PROPERTY_DatabaseName=/home/jboss/source/data/databases/derby/accounts
+      ACCOUNTS_DERBY_XA_CONNECTION_PROPERTY_DatabaseName=/opt/eap/standalone/data/databases/derby/accounts
       # _HOST and _PORT are required, but not used
       ACCOUNTS_DERBY_SERVICE_HOST=dummy
       ACCOUNTS_DERBY_SERVICE_PORT=1527
@@ -122,7 +110,7 @@ items:
 
       # Automatically add in the MAT_CACHE configuration, if we've included the
       # materialization VDB
-      if [ -f "/deployments/jdg-remote-cache-mat-vdb.xml" ]; then
+      if [ -f "/deployments/jdg-mat-cache-vdb.xml" ]; then
         RESOURCE_ADAPTERS=${RESOURCE_ADAPTERS},MAT_CACHE
       fi
 
@@ -133,8 +121,7 @@ items:
       MARKETDATA_MODULE_SLOT=main
       MARKETDATA_CONNECTION_CLASS=org.teiid.resource.adapter.file.FileManagedConnectionFactory
       MARKETDATA_CONNECTION_JNDI=java:/marketdata-file
-      #      MARKETDATA_PROPERTY_ParentDirectory='/home/jboss/source/data/teiidfiles/data'
-      MARKETDATA_PROPERTY_ParentDirectory='/tmp/src/data/teiidfiles/data'
+      MARKETDATA_PROPERTY_ParentDirectory='/opt/eap/standalone/data/teiidfiles/data'
       MARKETDATA_PROPERTY_AllowParentPaths=true
 
       # The "Excel" files.
@@ -144,24 +131,21 @@ items:
       EXCEL_MODULE_ID=org.jboss.teiid.resource-adapter.file
       EXCEL_CONNECTION_CLASS=org.teiid.resource.adapter.file.FileManagedConnectionFactory
       EXCEL_CONNECTION_JNDI=java:/excel-file
-      #     EXCEL_PROPERTY_ParentDirectory='/home/jboss/source/data/teiidfiles/excelFiles/'
-      EXCEL_PROPERTY_ParentDirectory='/tmp/src/data/teiidfiles/excelFiles/'
+      EXCEL_PROPERTY_ParentDirectory='/opt/eap/standalone/data/teiidfiles/excelFiles/'
       EXCEL_PROPERTY_AllowParentPaths=true
 
       # JDG configuration for materialization cache
       #
       # The following are required when using JDG as a datasource.
-      MAT_CACHE_ID=infinispanRemQSDSL
+      MAT_CACHE_ID=infinispanDS
       MAT_CACHE_MODULE_SLOT=main
-      MAT_CACHE_MODULE_ID=org.jboss.teiid.resource-adapter.infinispan.dsl
-      MAT_CACHE_CONNECTION_CLASS=org.teiid.resource.adapter.infinispan.dsl.InfinispanManagedConnectionFactory
+      MAT_CACHE_MODULE_ID=org.jboss.teiid.resource-adapter.infinispan.hotrod
+      MAT_CACHE_CONNECTION_CLASS=org.teiid.resource.adapter.infinispan.hotrod.InfinispanManagedConnectionFactory
       MAT_CACHE_CONNECTION_JNDI=java:/infinispanRemoteDSL
-      MAT_CACHE_PROPERTY_CacheTypeMap="addressbook:org.jboss.as.quickstarts.datagrid.hotrod.query.domain.Person;id"
-      MAT_CACHE_PROPERTY_ProtobufDefinitionFile=/quickstart/addressbook.proto
-      MAT_CACHE_PROPERTY_MessageDescriptor=quickstart.Person
-      MAT_CACHE_PROPERTY_Module=com.client.quickstart.addressbook.pojos
-      MAT_CACHE_PROPERTY_MessageMarshallers=org.jboss.as.quickstarts.datagrid.hotrod.query.domain.Person:org.jboss.as.quickstarts.datagrid.hotrod.query.marshallers.PersonMarshaller,org.jboss.as.quickstarts.datagrid.hotrod.query.domain.PhoneNumber:org.jboss.as.quickstarts.datagrid.hotrod.query.marshallers.PhoneNumberMarshaller,org.jboss.as.quickstarts.datagrid.hotrod.query.domain.PhoneType:org.jboss.as.quickstarts.datagrid.hotrod.query.marshallers.PhoneTypeMarshaller
       MAT_CACHE_PROPERTY_RemoteServerList=${DATAGRID_APP_HOTROD_SERVICE_HOST}:${DATAGRID_APP_HOTROD_SERVICE_PORT}
-      # Additionally, the following are required when using JDG to materialize views
-      MAT_CACHE_PROPERTY_StagingCacheName=addressbook_staging
-      MAT_CACHE_PROPERTY_AliasCacheName=addressbook_alias
+      MAT_CACHE_PROPERTY_UserName=jdg
+      MAT_CACHE_PROPERTY_Password=JBoss.123
+      MAT_CACHE_PROPERTY_AuthenticationRealm=ApplicationRealm
+      MAT_CACHE_PROPERTY_AuthenticationServerName=jdg-server
+      MAT_CACHE_PROPERTY_SaslMechanism=DIGEST-MD5
+
