--- a/cloud-2083/datavirt64-extensions-support-s2i.json
+++ b/cloud-2083/datavirt64-extensions-support-s2i.json
@@ -17,7 +17,7 @@
     },
     "labels": {
         "template": "datavirt64-extensions-support-s2i",
-        "xpaas": "1.0.0"
+        "jdv64": "1.0.0"
     },
     "message": "A new data service has been created in your project.  The username/password for accessing the service is ${TEIID_USERNAME}/${TEIID_PASSWORD}.  Please be sure to create the following secrets: \"${CONFIGURATION_NAME}\" containing the datasource configuration details required by the deployed VDB(s); \"${HTTPS_SECRET}\" containing the ${HTTPS_KEYSTORE} file used for serving secure content; \"${JGROUPS_ENCRYPT_SECRET}\" containing the ${JGROUPS_ENCRYPT_KEYSTORE} file used for securing JGroups communications.",
     "parameters": [
